[project]
name = "pcwa"
version = "0.2.7"
authors = [
  { name="Vahid Ganjalizadeh", email="vganjali@ucsc.edu" },
  { name="Holger Schmidt", email="hschmidt@ucsc.edu" },
]
description = "A highly parallel and fast event detector based on CWT transform."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/vganjali/pcwa"
"Bug Tracker" = "https://github.com/vganjali/pcwa/issues"
