[project]
name = "pcwa"
version = "0.3.1"
authors = [
  { name="Vahid Ganjalizadeh", email="vganjali@ucsc.edu" },
  { name="Holger Schmidt", email="hschmidt@ucsc.edu" },
]
description = "A highly parallel and fast event detector based on CWT transform."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.19.2",
    "scipy >= 1.6.2",
    "matplotlib >= 3.3.4",
    "h5py >= 2.10.0",
    "pandas >= 1.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/vganjali/pcwa"
"Bug Tracker" = "https://github.com/vganjali/pcwa/issues"
